--- a/HW1/task_1.ipynb
+++ b/HW1/task_1.ipynb
@@ -2206,17 +2206,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_o</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>price</th>\n",
+       "      <th>o_date</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>last_purchase_date</th>\n",
+       "      <th>last_purchase</th>\n",
+       "      <th>purchases</th>\n",
+       "      <th>total_rubs</th>\n",
+       "      <th>user_cat</th>\n",
+       "      <th>group</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1234491</td>\n",
+       "      <td>337544</td>\n",
+       "      <td>539.0</td>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016-03-11</td>\n",
+       "      <td>660</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2487</td>\n",
+       "      <td>121</td>\n",
+       "      <td>Lost</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1234494</td>\n",
+       "      <td>171642</td>\n",
+       "      <td>153.3</td>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017-12-25</td>\n",
+       "      <td>6</td>\n",
+       "      <td>33</td>\n",
+       "      <td>42671</td>\n",
+       "      <td>333</td>\n",
+       "      <td>VIP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1234497</td>\n",
+       "      <td>260596</td>\n",
+       "      <td>55.3</td>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017-08-02</td>\n",
+       "      <td>151</td>\n",
+       "      <td>12</td>\n",
+       "      <td>8626</td>\n",
+       "      <td>131</td>\n",
+       "      <td>Lost</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1234498</td>\n",
+       "      <td>1105609</td>\n",
+       "      <td>752.5</td>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>730</td>\n",
+       "      <td>1</td>\n",
+       "      <td>752</td>\n",
+       "      <td>111</td>\n",
+       "      <td>Lost</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1234500</td>\n",
+       "      <td>982696</td>\n",
+       "      <td>4410.0</td>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>730</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4410</td>\n",
+       "      <td>111</td>\n",
+       "      <td>Lost</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id_o  user_id   price     o_date  year  month last_purchase_date  \\\n",
+       "0  1234491   337544   539.0 2016-01-01  2016      1         2016-03-11   \n",
+       "1  1234494   171642   153.3 2016-01-01  2016      1         2017-12-25   \n",
+       "2  1234497   260596    55.3 2016-01-01  2016      1         2017-08-02   \n",
+       "3  1234498  1105609   752.5 2016-01-01  2016      1         2016-01-01   \n",
+       "4  1234500   982696  4410.0 2016-01-01  2016      1         2016-01-01   \n",
+       "\n",
+       "   last_purchase  purchases  total_rubs  user_cat group  \n",
+       "0            660          2        2487       121  Lost  \n",
+       "1              6         33       42671       333   VIP  \n",
+       "2            151         12        8626       131  Lost  \n",
+       "3            730          1         752       111  Lost  \n",
+       "4            730          1        4410       111  Lost  "
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv('df_18-08.csv', index=False)"
+   ]
   },
   {
    "cell_type": "code",
